<resources>
    <string name="app_name">SuperQuiz</string>
    <string name="id"> Identifiant</string>
    <string name="mdp"> Mot de passe </string>
    <string name="connect"> Se connecter</string>
    <string name="create"> Créer</string>
    <string name="alreadyAccount"> Vous avez déjà un compte ? Connectez-vous ! </string>
    <string name="createYourAccount">Créer votre compte</string>
    <string name="login">Connectez-vous !</string>
    <string name="newUser">Vous êtes nouveau ? Créez un compte !</string>
    <string name="modeGC">Culture générale</string>
    <string name="modeManga">Manga</string>
    <string name="modeBrand">Marques</string>
    <string name="modeSeries">Séries</string>
    <string name="modeMovie">Films</string>
    <string name="ranking">Classement</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="forgetPwd">Mot de passe oublié ?</string>
    <string name="history">Histoire</string>
    <string name="geography">Géographie</string>
    <string name="geographyQ1">Quelle est la capitale de l\&#039;Australie ? </string>
    <string name="geographyR1_1">Sydney</string>
    <string name="geographyR1_2">Melbourne</string>
    <string name="geographyR1_3">Canberra</string>
    <string name="geographyR1_4">Paris</string>
    <string name="geographyQ2">Quel pays n\&#039;est pas limitrophe de la Chine ?</string>
    <string name="geographyR2_1">La Russie</string>
    <string name="geographyR2_2">Le Pakistan</string>
    <string name="geographyR2_3">Le Vietnam</string>
    <string name="geographyR2_4">La Corée du Sud</string>
    <string name="geographyQ3">Quel est le pays le plus grand du monde ?</string>
    <string name="geographyR3_1">La Chine</string>
    <string name="geographyR3_2">L\&#039;Afrique</string>
    <string name="geographyR3_3">La Russie</string>
    <string name="geographyR3_4">Les États-Unis</string>
    <string name="geographyQ4">Quel est le fuseau horaire de Chicago ?</string>
    <string name="geographyR4_1"> - 6h</string>
    <string name="geographyR4_2">+ 10h</string>
    <string name="geographyR4_3">+ 5h</string>
    <string name="geographyR4_4">- 24h</string>
    <string name="geographyQ5">Comment est la terre ?</string>
    <string name="geographyR5_1">Ronde</string>
    <string name="geographyR5_2">Plate</string>
    <string name="geographyR5_3">Ronde aplatie</string>
    <string name="geographyR5_4">Ovale</string>
    <string name="guessLogo">A quelle marque appartient ce logo ?</string>
    <string name="guessSlogan">A quelle marque appartient ce slogan ?</string>
    <string name="historyQ1">En quelle année à eu lieu le couronnement de Charlemagne ?</string>
    <string name="historyR1_1">1000 après J-C</string>
    <string name="historyR1_2">800 après J-C</string>
    <string name="historyR1_3">200 avant J-C</string>
    <string name="historyR1_4">N\&#039;a pas pu être fait à cause du COVID</string>
    <string name="historyQ2">En quelle année à commencé la Vième République ?</string>
    <string name="historyR2_1">1958</string>
    <string name="historyR2_2">1948</string>
    <string name="historyR2_3">1955</string>
    <string name="historyR2_4">1950</string>
    <string name="historyQ3">Qui a été président de la République de 1995 à 2007 ?</string>
    <string name="historyR3_1">Nicolas Sarkozy</string>
    <string name="historyR3_2">François Mitterand</string>
    <string name="historyR3_3">Jacques Chirac</string>
    <string name="historyR3_4">Emmanuel Macron</string>
    <string name="historyQ4">De quand date l\&#039;apparition de l\&#039;Homme ?</string>
    <string name="historyR4_1">Il y a 2,5 millions d\&#039;années</string>
    <string name="historyR4_2">Il y a 2,6 milliards d\&#039;années</string>
    <string name="historyR4_3">Il y a 2021 années</string>
    <string name="historyR4_4">Il y a 3 millions d\&#039;années</string>
    <string name="historyQ5">Comment est mort Louis XV ?</string>
    <string name="historyR5_1">Mangé par un chien</string>
    <string name="historyR5_2">Guillotiné</string>
    <string name="historyR5_3">OKLM à Versailles</string>
    <string name="historyR5_4">Noyé dans son bain</string>
    <string name="attack_on_titanQ1">Quel Titan n\&#039;existe pas ? </string>
    <string name="attack_on_titanR1_1">Le Bestial</string>
    <string name="attack_on_titanR1_2">Le Mâchoire</string>
    <string name="attack_on_titanR1_3">L\&#039;Armure</string>
    <string name="attack_on_titanR1_4">Le Marteau</string>
    <string name="attack_on_titanQ2">Qui tue la mère d\&#039;Eren Jäger ?</string>
    <string name="attack_on_titanR2_1">Dinah Fritz</string>
    <string name="attack_on_titanR2_2">Eren Jäger</string>
    <string name="attack_on_titanR2_3">Kanny</string>
    <string name="attack_on_titanR2_4">Helmut Fritz</string>
    <string name="attack_on_titanQ3">Qui est le nouveau Colossal ?</string>
    <string name="attack_on_titanR3_1">Bertolt</string>
    <string name="attack_on_titanR3_2">Mikasa</string>
    <string name="attack_on_titanR3_3">Armin</string>
    <string name="attack_on_titanR3_4">Kenny</string>
    <string name="attack_on_titanQ4">Quel district se trouve au sain du mur Maria ?</string>
    <string name="attack_on_titanR4_1"> District de Trost</string>
    <string name="attack_on_titanR4_2"> District de Stohess</string>
    <string name="attack_on_titanR4_3"> District de Shiganshina</string>
    <string name="attack_on_titanR4_4"> District d\&#039;Utopia</string>
    <string name="attack_on_titanQ5">Qui a tué Sasha ?</string>
    <string name="attack_on_titanR5_1">Reiner</string>
    <string name="attack_on_titanR5_2">Gaby</string>
    <string name="attack_on_titanR5_3">Livaï</string>
    <string name="attack_on_titanR5_4">Sieg</string>
    <string name="pokemonQ1">D\&#039;où vient Sacha ? </string>
    <string name="pokemonR1_1">Jadielle</string>
    <string name="pokemonR1_2">Bourg-Palette</string>
    <string name="pokemonR1_3">Neuilly-sur-seine</string>
    <string name="pokemonR1_4">Argenta</string>
    <string name="pokemonQ2">Quel est le fidèle Pokémon de Sacha ?</string>
    <string name="pokemonR2_1"> Pikatchu </string>
    <string name="pokemonR2_2"> Pikachou </string>
    <string name="pokemonR2_3"> Pikachu </string>
    <string name="pokemonR2_4"> Pikatchou</string>
    <string name="pokemonQ3">Combien de génération de Pokémon existe-t-il ?</string>
    <string name="pokemonR3_1"> 10 </string>
    <string name="pokemonR3_2"> 8 </string>
    <string name="pokemonR3_3"> 5 </string>
    <string name="pokemonR3_4"> 12 </string>
    <string name="pokemonQ4">A quel Pokémon Racaillou est-il immunisé ?</string>
    <string name="pokemonR4_1">Carapuce</string>
    <string name="pokemonR4_2">Bulbizarre</string>
    <string name="pokemonR4_3">Salamèche</string>
    <string name="pokemonR4_4">Pikachu</string>
    <string name="pokemonQ5">Combien y a t-il de Pokémon ? </string>
    <string name="pokemonR5_1">Entre 800 et 849 </string>
    <string name="pokemonR5_2">Entre 850 et 899 </string>
    <string name="pokemonR5_3">Entre 900 et 949</string>
    <string name="pokemonR5_4">Entre 950 et 999</string>
    <string name="tokyo_ghoulQ1">Comment Kaneki est-il devenu une goule ? </string>
    <string name="tokyo_ghoulR1_1">En ayant un rapport sexuel avec une goule</string>
    <string name="tokyo_ghoulR1_2">En se faisant mordre par une goule </string>
    <string name="tokyo_ghoulR1_3">En se fesant implanter un organe de goule </string>
    <string name="tokyo_ghoulR1_4">Il est né goule</string>
    <string name="tokyo_ghoulQ2">Comment s\&#039;appelle l\&#039;organe dans le dos des goules ?</string>
    <string name="tokyo_ghoulR2_1"> Un Kagune</string>
    <string name="tokyo_ghoulR2_2"> Un Ukaku</string>
    <string name="tokyo_ghoulR2_3"> Une Hinami</string>
    <string name="tokyo_ghoulR2_4"> Des tentacules</string>
    <string name="tokyo_ghoulQ3">Quel est le rang maximal d\&#039;une goule ?</string>
    <string name="tokyo_ghoulR3_1"> Rang Z</string>
    <string name="tokyo_ghoulR3_2"> Rang 100</string>
    <string name="tokyo_ghoulR3_3"> Rang S</string>
    <string name="tokyo_ghoulR3_4"> Rang SSS</string>
    <string name="tokyo_ghoulQ4">Qui torture Kaneki Ken ?</string>
    <string name="tokyo_ghoulR4_1"> Yamori</string>
    <string name="tokyo_ghoulR4_2"> Ulquiorra </string>
    <string name="tokyo_ghoulR4_3"> Touka </string>
    <string name="tokyo_ghoulR4_4"> Kureo </string>
    <string name="tokyo_ghoulQ5">Que mange les goules ?</string>
    <string name="tokyo_ghoulR5_1">Vegan</string>
    <string name="tokyo_ghoulR5_2">Des humains</string>
    <string name="tokyo_ghoulR5_3">Des aliments normaux</string>
    <string name="tokyo_ghoulR5_4">Des tractopelles</string>
    <string name="my_hero_academiaQ1">Comment s\&#039;appelle le pouvoir des personnages ? </string>
    <string name="my_hero_academiaR1_1">L\&#039;Alter</string>
    <string name="my_hero_academiaR1_2">Le Fruit du démon</string>
    <string name="my_hero_academiaR1_3">La Bankaï</string>
    <string name="my_hero_academiaR1_4">Le Souffle</string>
    <string name="my_hero_academiaQ2">Quel est le pouvoir de All Might ?</string>
    <string name="my_hero_academiaR2_1">All For One</string>
    <string name="my_hero_academiaR2_2">For All One</string>
    <string name="my_hero_academiaR2_3">One For All</string>
    <string name="my_hero_academiaR2_4">For One All</string>
    <string name="my_hero_academiaQ3">Qui possède l\&#039;Alter Grenouille ?</string>
    <string name="my_hero_academiaR3_1"> Tsuyu</string>
    <string name="my_hero_academiaR3_2"> Eijiro</string>
    <string name="my_hero_academiaR3_3"> Minoru</string>
    <string name="my_hero_academiaR3_4"> Mezou</string>
    <string name="my_hero_academiaQ4">Qui est à la tête de la Mafia ?</string>
    <string name="my_hero_academiaR4_1"> Tomura Shigaraki</string>
    <string name="my_hero_academiaR4_2"> Himiko Toga</string>
    <string name="my_hero_academiaR4_3"> Kai Chisaki</string>
    <string name="my_hero_academiaR4_4"> All For One</string>
    <string name="my_hero_academiaQ5">Qui est le proviseur de l\&#039;université UA ?</string>
    <string name="my_hero_academiaR5_1">Le héro numéro 1</string>
    <string name="my_hero_academiaR5_2">Un ancien super méchant</string>
    <string name="my_hero_academiaR5_3">Le personnage principal</string>
    <string name="my_hero_academiaR5_4">Une souris</string>
    <string name="one_pieceQ1">Où est né Luffy ? </string>
    <string name="one_pieceR1_1">East Blue</string>
    <string name="one_pieceR1_2">North Blue</string>
    <string name="one_pieceR1_3">West Blue</string>
    <string name="one_pieceR1_4">South Blue</string>
    <string name="one_pieceQ2">Quel bâtiment se situe sur Red Line ?</string>
    <string name="one_pieceR2_1">Marine Ford</string>
    <string name="one_pieceR2_2">Impel Down</string>
    <string name="one_pieceR2_3">Mary Geoise</string>
    <string name="one_pieceR2_4">La maison de Luffy</string>
    <string name="one_pieceQ3">Comment s\&#039;appelle le fuit du démon de Luffy ?</string>
    <string name="one_pieceR3_1">Gomi Gomi No Mu</string>
    <string name="one_pieceR3_2">Gomu Gomu No Mi</string>
    <string name="one_pieceR3_3">Gono Gono Mi Nu</string>
    <string name="one_pieceR3_4">Gogo Gogo Mi Nu</string>
    <string name="one_pieceQ4">Quel personnage ne fait pas parti des 4 empereurs ?</string>
    <string name="one_pieceR4_1"> Shanks</string>
    <string name="guess_the_logoR1_1">MasterCard</string>
    <string name="guess_the_logoR1_2">Visa</string>
    <string name="guess_the_logoR1_3">Carte bleu</string>
    <string name="guess_the_logoR1_4">Carte Gold</string>
    <string name="guess_the_logoR2_1">Hineken</string>
    <string name="guess_the_logoR2_2">Heineken</string>
    <string name="guess_the_logoR2_3">Heinneken</string>
    <string name="guess_the_logoR2_4">Heneken</string>
    <string name="score">Score :</string>
</resources>