<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create"
    android:background="@drawable/background"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/forme"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:textAlignment="center"
            android:text="@string/createYourAccount" />

        <EditText
            android:id="@+id/userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:hint="@string/id"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/mdp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textSize="8sp"
            android:text="@string/alreadyAccount"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:onClick="connect"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>