<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History2"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyQ2"
            android:textSize="20dp"
            android:textAlignment="center"
            android:background="@drawable/formebtn">

        </TextView>
        <Button
            android:id="@+id/r1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/historyR2_1"
            android:background="@drawable/formebtn"
            android:onClick="goQ3">

        </Button>
        <Button
            android:id="@+id/r2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/historyR2_2"
            android:background="@drawable/formebtn"
            android:onClick="goQ3">

        </Button>
        <Button
            android:id="@+id/r3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/historyR2_3"
            android:background="@drawable/formebtn"
            android:onClick="goQ3">

        </Button>
        <Button
            android:id="@+id/r4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/historyR2_4"
            android:background="@drawable/formebtn"
            android:onClick="goQ3">

        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>