<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manga"
    android:background="@color/blue">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/attackOnTitan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/modeGC"
                android:onClick="goAttackOnTitan"
                android:src="@drawable/logo_attack_on_titan"
                android:scaleType="fitCenter">

            </ImageButton>
            <ImageButton
                android:id="@+id/pokemon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/modeManga"
                android:onClick="goPokemon"
                android:src="@drawable/logo_pokemon"
                android:scaleType="fitCenter">

            </ImageButton>
            <ImageButton
                android:id="@+id/tokyoGhoul"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/modeBrand"
                android:onClick="goTokyoGhoul"
                android:src="@drawable/logo_tokyo_ghoul"
                android:scaleType="fitCenter">

            </ImageButton>
            <ImageButton
                android:id="@+id/myHeroAcademia"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/modeSeries"
                android:onClick="goMyHeroAcademia"
                android:src="@drawable/logo_my_hero_academia"
                android:scaleType="fitCenter">

            </ImageButton>
            <ImageButton
                android:id="@+id/onePiece"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/modeMovie"
                android:onClick="goOnePiece"
                android:src="@drawable/logo_one_piece"
                android:scaleType="fitCenter">

            </ImageButton>
        </LinearLayout>

    </ScrollView>


</LinearLayout>