<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheLogo"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/questionGuessTheLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ce mode arrivera bientôt !"
            android:textColor="@color/white"
            android:layout_gravity="center">

        </TextView>
        <Button
            android:id="@+id/r1GuessTheLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/guess_the_logoR1_1"
            android:background="@drawable/formebtn">

        </Button>
        <Button
            android:id="@+id/r2GuessTheLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/guess_the_logoR1_2"
            android:background="@drawable/formebtn">

        </Button>
        <Button
            android:id="@+id/r3GuessTheLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/guess_the_logoR1_3"
            android:background="@drawable/formebtn">

        </Button>
        <Button
            android:id="@+id/r4GuessTheLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/guess_the_logoR1_4"
            android:background="@drawable/formebtn">

        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>