<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connect"
    android:background="@drawable/background"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="320dp"
        android:background="@drawable/forme"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:textAlignment="center"
            android:text="@string/login" />

        <EditText
            android:id="@+id/userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Identifiant"
            android:layout_marginTop="50dp"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Mot de passe"
            android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:alpha=".5"
                android:onClick="showHidePass"
                android:padding="5dp"
                android:src="@drawable/show_password" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/connect"
            android:background="@color/blue"/>

        <TextView
            android:id="@+id/textCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:text="@string/newUser"
            android:textAlignment="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textForgetPwd"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgetPwd"
            android:textAlignment="center"
            android:textSize="8sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>